# curveLandscape

./: .Rbuildignore  .Rprofile  .gitignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  README.md  dev-history.r  justfile
R/: WildSSA_extra.R  all_models_patch_level.R  create_habitat_centred.R  create_naive_grid.R  dissolve_boundaries.R  extendr-wrappers.R  ode_migration_only.R  ode_source_only.R  scale_habitat.R  ssa_source_only.R
data-raw/: all_landscapes.R  boar_centric_patches.R  habitat_map.R  naive_grids.R
man/: all_models_patch_level.Rd  create_landscape.Rd  curveLandscape-package.Rd  get_linear_id.Rd  get_row_col.Rd  get_total_number_of_elements.Rd  ode_migration_only.Rd  ode_source_only_wedge.Rd  sim_bd_only.Rd  sim_bdm.Rd  sim_migration_only.Rd  update_birth_death_and_migration.Rd  update_migration_only.Rd
notebooks/: 001_birth_death_process.R  002_birth_death_process.R  003_birth_death_carrying_capacity_process.R  003_wild_boar_annual_process_age_class.R  004_birth_death_process.R  005_compare_logis_to_poisson.R  006_female_only_model.R  007_SimInf_maybe.R  007_carrying_capacity.R  008_simple_birth_death_assym.R  009_rate_at_k_equals.R  010_rate_at_carrying_capacity.R  011_birth_death_carrying_capacity.R  012_birth_death_carrying_capacity_exct_prob_plot.R  013_birth_death_carrying_capacity_exct_prob_plot_start_cap.R  013_gillespie_growth_rate_rate.R  014_gillespie_growth_rate_rate.R  015_gillespie_growth_model.R  016_gillespie_growth_model_with_noise.R  017_gillespie_growth_model_with_pmax.R  018_.R  019_temporal_gillespie.R  020_separate_k.R  021_population_increase_decrease.R  022_balanced_birth_death.R  022_negative_birth_limit.R  023_extinction_well_rates.R  024_only_migration.R  025_naive_definition.R  026_kernel_epanechnikov_definition.R  026_migration_2nd_kind.R  027_sketch_implementation.R  028_linear_index_to_lower_trig.R  029_indexing_dist.R  030_sketching_indices_still.R  (+61 more)
src/rust/: Cargo.toml
src/rust/src/: birth_death_discrete.rs  full_migration_simulation.rs  habitat_based.rs  lib.rs  logspace.rs  simulation.rs  ssa_birth_death_only.rs  ssa_source_only_migration.rs  triangle_indexing.rs
(+6 files in other folders)
