[package]
name = 'curveLandscape'
publish = false
version = '0.1.0'
edition = '2021'
authors = ["Mossa Merhi Reimert"]

[lib]
crate-type = ['staticlib']
name = 'curveLandscape'

[dependencies]
# extendr-api = '*'
extendr-api = { git = "https://github.com/extendr/extendr.git" }
itertools = "0.12"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
readonly = "0.2"

[dev-dependencies]
extendr-engine = { git = "https://github.com/extendr/extendr.git" }

[features]
default = ["std"]
std = ["num-traits/std"]
