[package]
name = 'curveLandscape'
publish = false
version = '0.1.0'
edition = '2021'
authors = ["Mossa Merhi Reimert"]

[lib]
crate-type = ['staticlib']
name = 'curveLandscape'

[dependencies]
# extendr-api = '*'
extendr-api = { git = "https://github.com/extendr/extendr.git" }
itertools = "0.13.0"
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
readonly = "0.2.12"

[dev-dependencies]
extendr-engine = { git = "https://github.com/extendr/extendr.git" }

[features]
default = ["std"]
std = ["num-traits/std"]
