[package]
name = 'curveLandscape'
publish = false
version = '0.1.0'
edition = '2021'
authors = ["Mossa Merhi Reimert"]

[lib]
crate-type = ['staticlib']
name = 'curveLandscape'

[dependencies]
# extendr-api = '*'
extendr-api = { git = "https://github.com/extendr/extendr.git" }
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
# general dependencies
itertools = "0.13.0"
readonly = "0.2.12"
derive_more = { version = "1.0.0", features = ["full"] }
rayon = { version = "1.10.0", optional = true }
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
extendr-engine = { git = "https://github.com/extendr/extendr.git" }

[features]
default = ["std", "rayon"]
rayon = ["dep:rayon", "rand_chacha"]
std = ["num-traits/std"]

# For debug purposes..
[profile.release]
overflow-checks = true
debug-assertions = true
